--- a/templates/question_block.html
+++ b/templates/question_block.html
@@ -15,10 +15,13 @@
         <div class="side-info">
            <h2>Questionnaire</h2>
            <p> Page {{CONTEXT.current_page}} {% trans "sur" %} {{CONTEXT.nb_pages}} </p>
+            {% for title, text in CONTEXT.side_pannel.context__prompt.items %}
+                <h3>{{ title }}</h3>
+                <p>{{ text }}</p>
+            {% endfor %}
         </div>
         <div class="btn-box logout"> <a class="btn logout" href={% url "user_logout" %}>{% trans "Se déconnecter" %}</a></div>
     </div>
-
     <div class="main-panel">
         <div class="signup-form">
             <form class="form" method="post">
